# tdd

./: .gitignore  Dockerfile  Jenkinsfile  README.docker  build.sh  build_dev.sh  build_ext.sh  myoutput.xml  test_SimpleDemo_gtest.xml  test_SimpleDemo_gtest_1.xml  test_SimpleDemo_gtest_2.xml
bamboo/: Dockerfile  README.docker
dev/: CMakeLists.txt
dev/01_SimpleDemo/: CMakeLists.txt
dev/01_SimpleDemo/src/: romannumber.cxx
dev/01_SimpleDemo/test_bst/: CMakeLists.txt  test_romannumber.cxx
dev/01_SimpleDemo/test_cxg/: CMakeLists.txt
dev/01_SimpleDemo/test_gt/: CMakeLists.txt  test_romannumber.cxx
dev/02_Fixtures/: CMakeLists.txt
dev/02_Fixtures/include/roman/: RomanNumber.hxx
dev/02_Fixtures/src/: RomanNumber.cxx
dev/02_Fixtures/test_bst/: CMakeLists.txt  test_RomanNumber.cxx
dev/02_Fixtures/test_cxg/: CMakeLists.txt  test_RomanNumber.h
dev/02_Fixtures/test_gt/: CMakeLists.txt  test_RomanNumber.cxx
dev/03_Mocking/: CMakeLists.txt
dev/03_Mocking/include/cmdproc/: CommandListener.hxx  CommandParser.hxx  CommandProcessor.hxx
dev/03_Mocking/src/: CommandParser.cxx
dev/03_Mocking/test_gt/: CMakeLists.txt  test_CommandParser.cxx
dev/03_Stubs/: CMakeLists.txt
dev/03_Stubs/include/user/: AccountMgr.hxx  LoginService.hxx
dev/03_Stubs/src/: LoginService.cxx
dev/03_Stubs/test_gt/: CMakeLists.txt  test_LoginService.cxx
dev/04_Faking/: CMakeLists.txt
dev/04_Faking/include/user2/: AccountMgr.hxx  LoginService.hxx
dev/04_Faking/src/: LoginService.cxx
dev/04_Faking/test_gt/: CMakeLists.txt  test_LoginService.cxx
dev/05_Mocking/include/cmdproc/: CommandParser.hxx
dev/05_Mocking/test_gt/: CMakeLists.txt  test_CommandParser.cxx
dev/06_Exercise/: CMakeLists.txt
dev/06_Exercise/include/frac/: Fraction.hxx
dev/06_Exercise/include/mockdemo/: Brightness.hxx
dev/06_Exercise/src/: Brightness.cxx  Fraction.cxx
dev/06_Exercise/test_bst/: CMakeLists.txt  test_Fraction.cxx
dev/06_Exercise/test_cxg/: CMakeLists.txt  test_Fraction.h
dev/06_Exercise/test_gt/: CMakeLists.txt  test_Brightness.cxx  test_Fraction.cxx
dev/SimpleTest/: CMakeLists.txt
dev/SimpleTest/src/: SimpleTest.cxx
dev/tests_gt/: CMakeLists.txt
dev/tests_gt/SimpleDemo/: CMakeLists.txt
dev/tests_gt/SimpleDemo/include/SimpleDemo/: romannumber.hxx
dev/tests_gt/SimpleDemo/src/: romannumber.cxx
dev/tests_gt/SimpleDemo/test/: test_romannumber.cxx
dev/tests_gt/SimpleDemo/test_cxg/: mytestsuite.h  testsuite_romannumber.h
ext/: CMakeLists.txt
jenkins/: Dockerfile  README.docker
